--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  border: 1px solid black;
+  border-radius: 6px;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 10px;
+  max-width: 50%;
   text-align: center;
+  background-color: rgb(226, 224, 224);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Weather {
+  border: 1px solid black;
+  border-radius: 6px;
+  margin: 16px;
+  padding: 25px;
+  text-align: left;
+  background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-control {
+  margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul {
+  list-style-type: none;
+  font-size: 16px;
+  color: dimgray;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  scale: 125%;
 }
