--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -23,10 +23,25 @@ ul {
 .TemperatureIcon {
   scale: 90%;
 }
-.temperature {
+.WeatherTemperature {
   font-size: 48px;
+  margin-top: -40px;
 }
 
-.col {
+.superscript {
+  vertical-align: super;
+  font-size: 24px;
+}
+
+.col-4 {
+  text-align: center;
+}
+
+.row {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+.WeatherForecast-day {
   text-align: center;
 }
